# opencode-coordinate-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: policy.example.yaml
deploy/: backup-state.sh  install-systemd.sh  restore-state.sh  upgrade-systemd.sh
deploy/systemd/: personal-agent-telegram.service.in  personal-agent.env.example
docker/sandbox/: Dockerfile
docs/: architecture.md  backlog.md  deployment.md  getting-started.md  user-testing-backlog.md
docs/decisions/: 0001-control-plane-worker-boundary.md  0001-single-host-v1.md  0002-docker-sandbox.md  0003-provider-neutral-model-routing.md  0004-duckduckgo-first-search.md  0005-sandbox-opencode.md  0006-codex-cli-contract.md
src/personal_agent/: __init__.py
src/personal_agent/api/: __init__.py
src/personal_agent/application/: __init__.py  runtime.py  telegram.py
src/personal_agent/cli/: __init__.py  app.py  chat.py
src/personal_agent/core/: __init__.py  config.py  types.py
src/personal_agent/evaluations/: __init__.py  cases.py
src/personal_agent/execution/: __init__.py  docker.py  opencode.py  tool.py  workspace.py
src/personal_agent/graph/: __init__.py  runtime.py  state.py  workflow.py
src/personal_agent/models/: __init__.py  codex_cli.py  codex_cli_contract.py  codex_subscription.py  coordinator.py  factory.py
src/personal_agent/observability/: __init__.py  logging.py
tests/: README.md  conftest.py
tests/integration/: test_application_runtime.py  test_cli.py  test_codex_subscription_smoke.py  test_graph.py  test_persistence.py  test_policy.py  test_telegram_state.py
tests/unit/: test_codex_cli_contract.py  test_codex_subscription.py  test_config.py  test_core_types.py  test_deployment_assets.py  test_evaluation_cases.py  test_interactive_chat.py  test_local_execution.py  test_logging.py  test_model_factory.py  test_opencode.py  test_research.py  test_telegram_bot.py  test_telegram_client.py  test_todoist.py  test_verification.py
(+19 files in other folders)
