[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-agent"
version = "0.1.0"
description = "A permission-gated personal AI agent with VPS orchestration and a Mac worker."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20",
  "fastapi>=0.115",
  "httpx>=0.27",
  "langgraph>=0.4",
  "pydantic>=2.10",
  "pydantic-ai>=1.0",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
  "structlog>=24.4",
  "typer>=0.15",
  "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["personal_agent"]
